--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     min-width: 250px;
@@ -71,13 +72,13 @@ body {
   }
   
   .close:hover {
-    background-color: #f44336;
+    background-color: #696969;
     color: white;
   }
   
   /* Style the header */
   .header {
-    background-color: #f44336;
+    background-color: #696969;
     padding: 30px 40px;
     color: white;
     text-align: center;
