--- a/platforms/android/app/src/main/assets/www/css/index.css
+++ b/platforms/android/app/src/main/assets/www/css/index.css
@@ -34,7 +34,7 @@ body {
   
   /* Set all odd list items to a different color (zebra-stripes) */
   ul li:nth-child(odd) {
-    background: #f9f9f9;
+    background: #bfe6ff;
   }
   
   /* Darker background-color on hover */
@@ -44,7 +44,7 @@ body {
   
   /* When clicked on, add a background color and strike out text */
   ul li.checked {
-    background: #888;
+    background: #59bfff;
     color: #fff;
     text-decoration: line-through;
   }
@@ -78,7 +78,7 @@ body {
   
   /* Style the header */
   .header {
-    background-color: #696969;
+    background-color: #26abff;
     padding: 30px 40px;
     color: white;
     text-align: center;
